--- a/models/staging/__sources.yml
+++ b/models/staging/__sources.yml
@@ -2,7 +2,8 @@ version: 2
 
 sources:
   - name: ecom
-    schema: raw
+    # schema: raw
+    schema: jaffle_shop_demo_bq_dev
     description: E-commerce data for the Jaffle Shop
     freshness:
       warn_after:
